--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "node-schedule": "^2.1.0",
     "socket.io": "^4.5.1"
   }
 }
